add redux, absolute path setup, and a bunch of stuff

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 .App {
     text-align: center;
 }
+/* gotta go around semantic UI's rules somehow... */
+#app-title {
+    margin-top: 1em;
+}
 
 .limited-width {
     margin: auto;
